--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
   height: 1024px;
   margin: 0;
   padding: 0;
-  background-image: url(/bg.png);
+  background-image: url(bg.png);
   background-repeat: no-repeat;
 }
 
