--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ h1 {
   color: #EDEDED;
   text-align: center;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 44px;
 }
 
@@ -100,7 +100,7 @@ h1 {
   display: inline;
   color: #fafafa;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 500;
   margin-right: 8px;
 }
 .label span {
@@ -108,7 +108,7 @@ h1 {
   display: inline;
   color: #fafafa;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 4ㅣ00;
   vertical-align: text-top;
 }
 
@@ -125,7 +125,7 @@ h1 {
 .feature1 > .content > div > p {
   color: #EDEDED;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 .feature1 > .label {
   margin-bottom: 12px;
@@ -157,7 +157,7 @@ h1 {
 .feature4 > .content > div > p {
   color: #EDEDED;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 .feature4 > .label {
   margin-bottom: 12px;
@@ -175,7 +175,7 @@ h1 {
   display: inline;
   color: #EDEDED;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 .feature5 > .label {
   margin-bottom: 12px;
